[tool.poetry]
name = "airbnb-backend"
version = "0.1.0"
description = ""
authors = ["thewoowon <thewoowon@naver.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.1"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
